# esp32-gatt-ota

./: .gitignore  Cargo.toml  README.md  espflash.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
dev/: test.py
esp-bluedroid/: Cargo.toml
esp-bluedroid/.cargo/: config.toml
esp-bluedroid/src/: lib.rs  main.rs
esp-ota-ble/: Cargo.toml  README.md
esp-ota-ble-cli/: Cargo.toml
esp-ota-ble/src/: lib.rs  main.rs
esp-ota-ble/src/ota_ble/: characteristic.rs  macros.rs  mod.rs
partitions/: esp32-s3-wroom-1-n8r8.csv
src/: lib.rs  main.rs
src/gatt_server/: mod.rs  uuids.rs
src/gatt_service/: mod.rs
src/ota_ble/: commands.rs  mod.rs  uuids.rs
