[package]
name = "esp32-gatt-ote"
version = "0.1.0"
authors = ["Demid Kaidalov <demid.kaidalov@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[lib]
name = "esp32_gatt_ote"
path = "src/lib.rs"

[package.metadata.espflash]
partition_table = "partitions/esp32-s3-wroom-1-n8r8.csv"
baudrate = 921600

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native", "experimental"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
esp-idf-svc = { version = "0.48", default-features = false }
log = { version = "0.4", default-features = false }
anyhow = { version = "1" }
esp32-nimble = { version = "0.6" }
md5 = "0.7.0"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
embuild = "0.31.3"
